--- a/add.html
+++ b/add.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="add.js"></script>
     <title>Home</title>
 </head>
 <body>
     <ul>
         <li><a href="add.html">Add</a></li>
-        <li><a href="delete.html">Remove</a></li>
         <li><a href="view.html">View and Search</a></li>
       </ul>
-    <div>
+    <div class = "formAdd">
         <form>
             <label for="first_name">First name:</label><br>
             <input type="text" id="first_name" name="first_name"><br>
@@ -24,7 +23,7 @@
             <input type="phone" id="phone" name="phone"><br>
             <label for="email">Email</label><br>
             <input type="email" id="email" name="email"><br>
-            <input type="submit" value="Add">
+            <button type="submit">Add</button>
           </form>
     </div>
 </body>
