--- a/view.html
+++ b/view.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script type="module" src="search.js"></script>
     <title>Home</title>
 </head>
 <body>
     <ul>
         <li><a href="add.html">Add</a></li>
-        <li><a href="delete.html">Remove</a></li>
         <li><a href="view.html">View and Search</a></li>
       </ul>
     <div id = "viewPeople">
